# spiral-blur-markers

./: .gitignore  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
configs/: rtdetr_l_spiral_p5_n.yaml
sample_data/: README.md
sample_data/sharp/annotations/: blur_04000.json  blur_04001.json  blur_04002.json  blur_04003.json  clean_04000.json  clean_04001.json
sample_data/sharp/labels/: blur_04000.txt  blur_04001.txt  blur_04002.txt  blur_04003.txt  clean_04000.txt  clean_04001.txt
scripts/: eval_p4_ai_pipeline_group_blur_v2.py  export_p4_ai_blur_samples_group_blur_v2.py  export_real_robot_a3_sheet.py  export_real_tests_paper_style.py  generate_p4_ai_dataset_sharp_replay.py  plot_blur_level_results.py  preview_paper_v4_markers.py  train_p4_grouped_blur_estimator_v2_from_stage1.py  train_p4_rtdetr_detector_stable.py
src/spiral_markers/: __init__.py  corruptions.py  geometry.py  io_utils.py  rendering.py  synthesis.py  tag_layout.py
src/spiral_markers/ml/: __init__.py  p4_ai_inference.py  p4_blur_reasoner.py  p4_group_blur_inference_v2.py  p4_grouped_blur_estimator.py  p4_grouped_blur_estimator_v2.py  runtime_env.py
