[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiral-blur-markers"
version = "0.1.0"
description = "Sharp log-spiral robot markers with a two-stage RT-DETR and transformer blur-reasoning pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mohammad Khsh" }]
dependencies = [
  "k-means-constrained>=0.7.6",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "opencv-python>=4.9",
  "PyYAML>=6.0",
  "scipy>=1.12",
  "torch>=2.2",
  "ultralytics>=8.3",
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.0",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
